codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__plan_implementation_popup_context_usage.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
  要 实 施 此 计 划 吗 ？

› 1. 是 ， 实 施 此 计 划         切 换 到 默 认 模 式 并 开 始 编 码 。
  2. 是 ， 清 空 上 下 文 并 实 施   创 建 新 会 话 。 上 下 文 ： 89% used。
  3. 否 ， 留 在 计 划 模 式       继 续 与 模 型 制 定 计 划 。

  按  enter 确 认 ， 或 按  esc 返 回
